Fix typo "Погняли"

--- a/project/templates/jinja2/view.html
+++ b/project/templates/jinja2/view.html
@@ -9,7 +9,7 @@
 
 	<form action="/view/{{ depth + 1}}/" method="post" id="code_input">
 		<input type="text" id="code" name="code" value="{{ code }}">
-		<input type="submit" value="Погняли!🚀">
+		<input type="submit" value="Погнали!🚀">
 	</form>
 
 	<hr>
