--- a/project/templates/jinja2/base.html
+++ b/project/templates/jinja2/base.html
@@ -10,15 +10,25 @@
 	body {
 		padding: 5%;
 		margin: auto;
-		max-width: 540px;
+		max-width: 700px;
 		font-family: 'Noto Sans', sans-serif;
 		font-family: 'Source Sans Pro', sans-serif;
-		background: #ffffdd;
+		background: #fcf0db;
 	}
 	#content {
-		height: 300px;
-		background: #ffffcc;
+		border-style: solid;
+		border-color: #ffffee;
+		height: 200px;
+		background: #ffffdd;
 		overflow: scroll;
+	}
+	a {
+		color: black;
+		background-color: #ffffdd;
+	}
+
+	#rocket {
+		cursor: pointer;
 	}
 </style>
 
