Store level's own code in level's own model

--- a/project/templates/jinja2/view.html
+++ b/project/templates/jinja2/view.html
@@ -7,7 +7,7 @@
 
 	<div id="content"><p>{{ content }}</p></div>
 
-	<form action="/view/{{ depth + 1}}/" method="post" id="code_input">
+	<form action="/view/{{ depth }}/" method="post" id="code_input">
 		<input type="text" id="code" name="code" value="{{ code }}">
 		<input type="submit" value="🚀">
 	</form>
