Add state frame and edit sizes of content

--- a/project/templates/jinja2/base.html
+++ b/project/templates/jinja2/base.html
@@ -15,20 +15,35 @@
 		font-family: 'Source Sans Pro', sans-serif;
 		background: #fcf0db;
 	}
-	#content {
+	.content {
 		border-style: solid;
 		border-color: #ffffee;
-		height: 200px;
+		padding: .5em;
+		min-height: 5em;
 		background: #ffffdd;
-		overflow: scroll;
 	}
 	a {
 		color: black;
 		background-color: #ffffdd;
 	}
 
-	#rocket {
+	.rocket {
 		cursor: pointer;
+	}
+
+	.state {
+		font-size: 1.4em;
+		height: 2em;
+		line-height: 2em;
+		text-align: center;
+		border-radius: .4em;
+	}
+
+	.correct {
+		background-color: #97fc7e;
+	}
+	.wrong {
+		background-color: #f9a8a7;
 	}
 </style>
 
