--- a/project/templates/jinja2/view.html
+++ b/project/templates/jinja2/view.html
@@ -3,9 +3,21 @@
 {% block title %} {{ title|e }} {% endblock %}
 
 {% block content %}
+	{% if user_input %}
+		{% if is_user_wrong %}
+			<div class="state wrong">
+				<p>"{{ user_input }}" – это неправильный ответ 😔</p>
+			</div>
+		{% else %}
+			<div class="state correct">
+				<p>Йоу, "{{ user_input }}" – это правильно!</p>
+			</div>
+		{% endif %}
+	{% endif %}
+
 	<h1>{{ title|e }}</h1>
 
-	<div id="content"><p>{{ content }}</p></div>
+	<div class="content"><p>{{ content }}</p></div>
 
 	<form action="/view/{{ depth }}/" method="post" id="code_input">
 		<input type="text" id="code" name="code" value="{{ code }}">
@@ -13,7 +25,7 @@
 	</form>
 
 	<hr>
-	<div id="progress">
+	<div class="progress">
 		<p>Прогресс:
 		<ol>
 		{% for title in progress %}
@@ -24,7 +36,7 @@
 	</div>
 
 	<hr>
-	<div id="load">Волшебная <a href="{{ loadlink }}">ссылочка</a> для подзагрузки прогресса.</div>
+	<div class="load">Волшебная <a href="{{ loadlink }}">ссылочка</a> для подзагрузки прогресса.</div>
 
 {% endblock %}
 
