Add border to content

--- a/project/templates/jinja2/base.html
+++ b/project/templates/jinja2/base.html
@@ -18,6 +18,7 @@
 	.content {
 		border-style: solid;
 		border-color: #ffffee;
+		border-radius: .5em;
 		padding: .5em;
 		min-height: 5em;
 		background: #ffffdd;
