Change form styles

--- a/project/templates/jinja2/base.html
+++ b/project/templates/jinja2/base.html
@@ -10,7 +10,7 @@
 	body {
 		padding: 5%;
 		margin: auto;
-		max-width: 700px;
+		max-width: 70%;
 		font-family: 'Noto Sans', sans-serif;
 		font-family: 'Source Sans Pro', sans-serif;
 		background: #fcf0db;
@@ -28,8 +28,28 @@
 		background-color: #ffffdd;
 	}
 
+	input[type=text] {
+		width: 70%;
+		border-radius: .5em;
+		padding: .5em;
+		border: solid #ffffff;
+	}
+	input[type=text]:focus {
+		border: solid #ffffee;
+	}
+	
+
 	.rocket {
+		font-size: 1.2em;
+		background-color: #ffffdd;
+		border: none;
+		border-radius: .5em;
+		padding: .2em;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
 		cursor: pointer;
+		max-width: 2em;
 	}
 
 	.state {
