Add start and end page

--- a/project/templates/jinja2/base.html
+++ b/project/templates/jinja2/base.html
@@ -23,6 +23,12 @@
 		min-height: 5em;
 		background: #ffffdd;
 	}
+
+	.startbutton {
+		text-align: center;
+		font-size: 5em;
+	}
+
 	a {
 		color: black;
 		background-color: #ffffdd;
