--- a/project/templates/jinja2/base.html
+++ b/project/templates/jinja2/base.html
@@ -60,7 +60,7 @@
 
 	.state {
 		font-size: 1.4em;
-		height: 2em;
+		min-height: 2em;
 		line-height: 2em;
 		text-align: center;
 		border-radius: .4em;
