Comment what "/load/..." link is

--- a/project/templates/jinja2/view.html
+++ b/project/templates/jinja2/view.html
@@ -46,6 +46,7 @@
 
 	<hr>
 	<div class="load">
+		<!-- Link which loads the progress to current level if a gamer needs help. -->
 		<p>
 			Волшебная <a href="{{ loadlink }}">ссылочка</a> для подзагрузки прогресса.
 		</p>
